# endian-hasher

./: Cargo.toml  README.md
src/: gen.pl  lib.rs
