[package]
name = "endian-hasher"
version = "0.1.1"
authors = ["Jeffrey Burdges <burdges@gnunet.org>"]

description = "Endianness wrapper for Hashers"

homepage = "https://github.com/burdges/endian-hasher"
repository = "https://github.com/burdges/endian-hasher.git"
documentation = "https://docs.rs/endian-hasher/"

readme = "README.md"

keywords = ["hash","hasher", "endian", "endianness", "little-endian"]

license = "MIT/Apache-2.0"


[dependencies]


